// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDualRange allows value prop to accept empty strings 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
  </div>
</div>
`;

exports[`EuiDualRange allows value prop to accept numbers 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange input props can be applied to min and max inputs 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Min value"
        class="euiFieldNumber euiRangeInput euiRangeInput--min"
        max="8"
        min="1"
        name="name-minValue"
        step="1"
        style="width:3.6em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      id="id"
      max="10"
      min="1"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:0%;width:77.77777777777779%"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="Max value"
        class="euiFieldNumber euiRangeInput euiRangeInput--max"
        max="10"
        min="1"
        name="name-maxValue"
        step="1"
        style="width:3.6em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange is rendered 1`] = `
<div
  class="euiRangeWrapper euiDualRange testClass1 testClass2"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props compressed should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--compressed euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--compressed"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiRangeSlider--compressed euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight euiRangeHighlight--compressed"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props custom ticks should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--hasTicks"
  >
    <div
      class="euiRangeTicks euiRangeTicks--isCustom"
    >
      <button
        class="euiRangeTick euiRangeTick--isCustom"
        style="left:calc(-Infinity% + 8px)"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        20kb
      </button>
      <button
        class="euiRangeTick euiRangeTick--isCustom euiRangeTick--isMax euiRangeTick--hasTickMark"
        style="right:0%;margin-right:-1.25em"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        <span
          aria-hidden="true"
          class="euiRangeTick__pseudo"
          style="margin-right:calc(1.25em + 4px)"
        />
        100kb
      </button>
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasTicks euiRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight euiRangeHighlight--hasTicks"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:20%;width:80%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props disabled should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--disabled"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      disabled=""
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props fullWidth should render 1`] = `
<div
  class="euiRangeWrapper euiRangeWrapper--fullWidth euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props inputs should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange testClass1 testClass2"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--min"
        max="8"
        min="0"
        name="name-minValue"
        step="1"
        style="width:4.4em"
        type="number"
        value="1"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    aria-hidden="true"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
  <div
    class="euiRange__horizontalSpacer"
  />
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="euiFieldNumber euiRangeInput euiRangeInput--max"
        max="100"
        min="1"
        name="name-maxValue"
        step="1"
        style="width:4.4em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props isDraggable should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props labels should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <label
    class="euiRangeLabel euiRangeLabel--min"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
  <label
    class="euiRangeLabel euiRangeLabel--max"
  >
    100
  </label>
</div>
`;

exports[`EuiDualRange props levels should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--hasLevels"
  >
    <div
      class="euiRangeLevels"
    >
      <span
        class="euiRangeLevel euiRangeLevel--danger"
        style="width:20%"
      />
      <span
        class="euiRangeLevel euiRangeLevel--success"
        style="width:80%"
      />
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props range should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack"
  >
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props slider should display in popover 1`] = `
<div
  class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiRange__popover"
>
  <div
    class="euiPopover__anchor"
  >
    <div>
      <div
        class="euiFormControlLayout euiFormControlLayoutDelimited"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiFormControlLayoutDelimited__input"
            max="8"
            min="0"
            name="name-minValue"
            step="1"
            type="number"
            value="1"
          />
          <div
            class="euiText euiText--small euiFormControlLayoutDelimited__delimeter"
          >
            <div
              class="euiTextColor euiTextColor--subdued"
            >
              →
            </div>
          </div>
          <input
            aria-label="aria-label"
            class="euiFieldNumber euiFormControlLayoutDelimited__input"
            max="100"
            min="1"
            name="name-maxValue"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDualRange props ticks should render 1`] = `
<div
  class="euiRangeWrapper euiDualRange"
>
  <div
    aria-hidden="false"
    class="euiRangeTrack euiRangeTrack--hasTicks"
  >
    <div
      class="euiRangeTicks"
    >
      <button
        class="euiRangeTick"
        style="left:calc(NaN% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="0"
      >
        0
      </button>
      <button
        class="euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="20"
      >
        20
      </button>
      <button
        class="euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="40"
      >
        40
      </button>
      <button
        class="euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="60"
      >
        60
      </button>
      <button
        class="euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="80"
      >
        80
      </button>
      <button
        class="euiRangeTick"
        style="left:calc(-Infinity% + 8px);max-width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="100"
      >
        100
      </button>
    </div>
    <input
      aria-hidden="true"
      class="euiRangeSlider euiRangeSlider--hasTicks euiRangeSlider--hasRange euiDualRange__slider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      tabindex="-1"
      type="range"
    />
    <div
      class="euiRangeHighlight euiRangeHighlight--hasTicks"
    >
      <div
        class="euiRangeHighlight__progress"
        style="margin-left:1%;width:7.000000000000001%"
      />
    </div>
  </div>
</div>
`;
